--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,6 +1,6 @@
 <div class="ibm-sitenav-menu-container-new">
     <div class="ibm-sitenav-menu-list">
-        <h5 class="ibm-h5"><a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Offering</a> | <a routerLink="/manager" [queryParams]="{ page: 1 }" routerLinkActive="active">manager</a></h5>        
+        <h5 class="ibm-h5"><a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Offering</a> | <a routerLink="/manager" routerLinkActive="active">manager</a></h5>        
     </div>
     <router-outlet></router-outlet>
 </div>
