--- a/src/app/search-results/search-results.component.html
+++ b/src/app/search-results/search-results.component.html
@@ -217,7 +217,7 @@
                         <th>Status</th> 
                         <th>Start Date</th> 
                         <th>End Date</th> 
-                        <th>Available</th> 
+                        <th>Availability</th> 
                         <th>Allocation</th>
                         <th>Project Name</th>
                     </tr>
